# k3s-experiments

./: README.md  WORKSPACE  skaffold.yaml
k8s/local/: roscore-daemon-set.arm.yaml
services/echo-rust/: BUILD.bazel  main.rs
services/echo-rust/k8s/local/: service.yaml
services/hello/: BUILD.bazel  main.go
services/hello/k8s/: local.yaml
services/hello/k8s/local/: daemon-set.arm.yaml  daemon-set.yaml  service.yaml
